--- a/src/app/features/employees/employee-list/employee-list.component.html
+++ b/src/app/features/employees/employee-list/employee-list.component.html
@@ -1,1 +1,50 @@
-<p>employee-list works!</p>
+<div class="container" fxLayout="row" fxLayoutAlign="center none">
+  <div fxFlex="95%">
+    <mat-card>
+      <div class="fab-top">
+        <button mat-fab color="primary" aria-label="Add" (click)="add()">
+          <mat-icon>add</mat-icon>
+        </button>
+      </div>
+      <mat-card-header>
+        <mat-card-title>Employees</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <mat-form-field fxFlex="60%">
+          <input matInput type="text" placeholder="Filter" (keyup)="filter($event)">
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-content>
+        <table mat-table [dataSource]="dataSource" matSort>
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.firstName}} {{element.lastName}}</td>
+          </ng-container>
+          <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+          </ng-container>
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+          </ng-container>
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-icon-button>
+                <mat-icon color="accent" class="mat-18">edit</mat-icon>
+              </button>
+              <button mat-icon-button color="primary">
+                <mat-icon color="warn" class="mat-18">delete</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [pageSize]="5" [pageSizeOptions]="[5,25,50]">
+        </mat-paginator>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
