--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,18 @@ body {
 .login-container {
   height: 80vh;
 }
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
+.fab-top {
+  z-index: 1;
+  position: absolute;
+  right: 2%;
+  top: 2%;
+}
+
+.mat-icon.mat-accent {
+  color: yellow;
+}
