--- a/src/app/features/employees/employee-list/employee-list.component.html
+++ b/src/app/features/employees/employee-list/employee-list.component.html
@@ -31,10 +31,13 @@
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let element">
+              <button mat-icon-button (click)="show(element.id)">
+                <mat-icon class="mat-18">monitor</mat-icon>
+              </button>
               <button mat-icon-button (click)="edit(element.id)">
                 <mat-icon color="accent" class="mat-18">edit</mat-icon>
               </button>
-              <button mat-icon-button color="primary">
+              <button mat-icon-button color="primary" (click)="delete(element.id)">
                 <mat-icon color="warn" class="mat-18">delete</mat-icon>
               </button>
             </td>
