--- a/src/app/features/employees/employee-list/employee-list.component.html
+++ b/src/app/features/employees/employee-list/employee-list.component.html
@@ -11,7 +11,7 @@
       </mat-card-header>
       <mat-card-content>
         <mat-form-field fxFlex="60%">
-          <input matInput type="text" placeholder="Filter" (keyup)="filter($event)">
+          <input matInput type="text" placeholder="Filter" [(ngModel)]="filterKeyword" (keyup)="filter()">
         </mat-form-field>
       </mat-card-content>
       <mat-card-content>
@@ -45,7 +45,9 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-        <mat-paginator [pageSize]="5" [pageSizeOptions]="[5,25,50]">
+        <mat-paginator [pageSize]="pageState ? pageState.pageSize : 0" [pageSizeOptions]="[5,25,50]"
+          [length]="pageState ? pageState.length : 0" [pageIndex]="pageState ? pageState.pageIndex : 0"
+          (page)="changePage($event)">
         </mat-paginator>
       </mat-card-content>
     </mat-card>
